# reactos

./: CMakeLists.txt
.github/workflows/: build.yml
dll/directx/wine/d3d10/: CMakeLists.txt
dll/directx/wine/d3d11/: CMakeLists.txt
dll/directx/wine/d3d8/: CMakeLists.txt
dll/directx/wine/d3d9/: CMakeLists.txt
dll/directx/wine/d3dcompiler_39/: CMakeLists.txt
dll/directx/wine/d3dcompiler_43/: CMakeLists.txt
dll/directx/wine/d3dcompiler_47/: CMakeLists.txt
dll/directx/wine/d3dx9_36/: d3dx9.cmake
dll/directx/wine/d3dxof/: CMakeLists.txt
dll/directx/wine/dxdiagn/: CMakeLists.txt  dxdiag_private.h
dll/ntdll/def/: ntdll.spec
dll/ntdll/ldr/: ldrinit.c
dll/win32/wdmaud.drv/: wdmaud.c
drivers/usb/usbstor/: scsi.c
media/inf/: syssetup.inf
modules/: CMakeLists.txt
ntoskrnl/io/iomgr/: file.c
ntoskrnl/ke/: timerobj.c
ntoskrnl/ke/i386/: cpu.c
ntoskrnl/mm/ARM3/: mdlsup.c  syspte.c
sdk/include/psdk/: basetsd.h
sdk/include/xdk/: interlocked.h
sdk/lib/: CMakeLists.txt
sdk/lib/rtl/: critical.c
sdk/lib/vkd3d/: CMakeLists.txt
sdk/lib/vkd3d/include/private/: vkd3d_common.h
sdk/lib/vkd3d/libs/vkd3d/: CMakeLists.txt
sdk/lib/vkd3d/libs/vkd3d-common/: CMakeLists.txt  debug.c
sdk/lib/vkd3d/libs/vkd3d-shader/: CMakeLists.txt  vkd3d_shader_main.c  vkd3d_shader_private.h
win32ss/: CMakeLists.txt
win32ss/drivers/videoprt/: videoprt.c
win32ss/gdi/eng/: pdevobj.c
win32ss/gdi/gdi32_vista/: d3dkmt.c  gdi32_vista.spec
win32ss/gdi/ntgdi/: basicrenderersys.c  d3dkmt.c  print.c
win32ss/user/ntuser/: display.c
(+13 files in other folders)
